using System;
namespace SchoolJournal.Models
{
    public class JournalPage
    {
        private readonly string _subject;

        public JournalPage(string subject)
        {
            _subject = subject;
        }
    }
}
